Fix index page spacing
The last section element had both a bottom marging and bottom padding.
The page only needs one of those.

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -28,7 +28,7 @@ section {
 
 section:last-of-type {
     border-bottom: none;
-    margin-bottom: var(--space-xxl);
+    margin-bottom: 0;
 }
 
 h2 {
